--- a/freq_itemset_analysis.ipynb
+++ b/freq_itemset_analysis.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "110173it [00:11, 9841.42it/s] \n"
+      "54093it [00:04, 11735.30it/s]\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
     "            if currentSize >= targetSize:\n",
     "                break\n",
     "\n",
-    "sampleData('Sampled_Amazon_Meta.json', 'Sample_Amazon_Meta2.json', 1)\n"
+    "sampleData('Sampled_Amazon_Meta.json', 'Sample_Amazon_Meta3.json', 0.5)\n"
    ]
   },
   {
@@ -58,21 +58,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing Data: 100%|██████████| 110174/110174 [00:03<00:00, 28682.03it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# import json \n",
+    "# import re\n",
+    "# from tqdm import tqdm\n",
+    "\n",
+    "# def preprocessing(inputFile, outputFile):\n",
+    "#     processedData = []\n",
+    "\n",
+    "#     with open(inputFile, 'r', encoding='utf-8') as inputFilee:\n",
+    "#         # Count the total number of lines in the input file for tqdm progress tracking\n",
+    "#         total_lines = sum(1 for _ in open(inputFile, 'r', encoding='utf-8'))\n",
+    "\n",
+    "#         with tqdm(total=total_lines, desc='Processing Data') as pbar:\n",
+    "#             for line in inputFilee:\n",
+    "#                 data = json.loads(line)\n",
+    "\n",
+    "#                 if 'title' in data and 'related' in data and 'also_bought' in data['related']:\n",
+    "#                     title = data.get('title', '')\n",
+    "#                     titleCleaned = re.sub(r'[\\d\\W_ ]+', '', title).lower()\n",
+    "\n",
+    "#                     # Preprocess other fields if needed\n",
+    "#                     feature = data.get('feature', '')\n",
+    "#                     featureCleaned = re.sub(r'[\\d\\W_ ]+', '', feature).lower()\n",
+    "\n",
+    "#                     description = data.get('description', '')\n",
+    "#                     descriptionCleaned = re.sub(r'[\\d\\W_ ]+', '', description).lower()\n",
+    "\n",
+    "#                     brand = data.get('brand', '')\n",
+    "#                     brandCleaned = re.sub(r'[\\d\\W_ ]+', '', brand).lower()\n",
+    "\n",
+    "#                     # Create a transaction with preprocessed data\n",
+    "#                     transaction = {\n",
+    "#                         'title': titleCleaned,\n",
+    "#                         'feature': featureCleaned,\n",
+    "#                         'description': descriptionCleaned,\n",
+    "#                         'brand': brandCleaned,\n",
+    "#                         'related': data['related']['also_bought']\n",
+    "#                     }\n",
+    "#                     processedData.append(transaction)\n",
+    "\n",
+    "#                 # Update tqdm progress bar\n",
+    "#                 pbar.update(1)\n",
+    "\n",
+    "#     with open(outputFile, 'w', encoding='utf-8') as outputFilee:\n",
+    "#         for item in processedData:\n",
+    "#             outputFilee.write(json.dumps(item) + '\\n')\n",
+    "\n",
+    "# preprocessing('Sample_Amazon_Meta2.json', 'Preprocessed_Amazon_Meta222.json')\n",
+    "\n",
     "import json \n",
     "import re\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    # Remove digits, special characters, and underscores\n",
+    "    cleaned_text = re.sub(r'[\\d\\W_]+', ' ', text)\n",
+    "    # Convert to lowercase\n",
+    "    cleaned_text = cleaned_text.lower()\n",
+    "    return cleaned_text.strip()\n",
     "\n",
     "def preprocessing(inputFile, outputFile):\n",
     "    processedData = []\n",
@@ -83,31 +130,32 @@
     "\n",
     "        with tqdm(total=total_lines, desc='Processing Data') as pbar:\n",
     "            for line in inputFilee:\n",
-    "                data = json.loads(line)\n",
+    "                try:\n",
+    "                    data = json.loads(line)\n",
     "\n",
-    "                if 'title' in data and 'related' in data and 'also_bought' in data['related']:\n",
-    "                    title = data.get('title', '')\n",
-    "                    titleCleaned = re.sub(r'[\\d\\W_ ]+', '', title).lower()\n",
+    "                    title = preprocess_text(data.get('title', ''))\n",
+    "                    feature = preprocess_text(data.get('feature', ''))\n",
+    "                    description = preprocess_text(data.get('description', ''))\n",
+    "                    brand = preprocess_text(data.get('brand', ''))\n",
     "\n",
-    "                    # Preprocess other fields if needed\n",
-    "                    feature = data.get('feature', '')\n",
-    "                    featureCleaned = re.sub(r'[\\d\\W_ ]+', '', feature).lower()\n",
-    "\n",
-    "                    description = data.get('description', '')\n",
-    "                    descriptionCleaned = re.sub(r'[\\d\\W_ ]+', '', description).lower()\n",
-    "\n",
-    "                    brand = data.get('brand', '')\n",
-    "                    brandCleaned = re.sub(r'[\\d\\W_ ]+', '', brand).lower()\n",
+    "                    # Exclude categories column from preprocessing\n",
+    "                    # If 'categories' is in data, you can skip it as follows\n",
+    "                    categories = data.get('categories', '')\n",
     "\n",
     "                    # Create a transaction with preprocessed data\n",
     "                    transaction = {\n",
-    "                        'title': titleCleaned,\n",
-    "                        'feature': featureCleaned,\n",
-    "                        'description': descriptionCleaned,\n",
-    "                        'brand': brandCleaned,\n",
-    "                        'related': data['related']['also_bought']\n",
+    "                        'title': title,\n",
+    "                        'feature': feature,\n",
+    "                        'description': description,\n",
+    "                        'brand': brand,\n",
+    "                        'categories': categories,  # Include 'categories' as-is\n",
+    "                        'related': data.get('related', {})  # Include 'related' as-is\n",
     "                    }\n",
+    "                    print(\"Preprocessed data:\", transaction)  # Print the preprocessed data\n",
     "                    processedData.append(transaction)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error processing line: {line}\")\n",
+    "                    print(e)\n",
     "\n",
     "                # Update tqdm progress bar\n",
     "                pbar.update(1)\n",
@@ -116,7 +164,7 @@
     "        for item in processedData:\n",
     "            outputFilee.write(json.dumps(item) + '\\n')\n",
     "\n",
-    "preprocessing('Sample_Amazon_Meta2.json', 'Preprocessed_Amazon_Meta2.json')\n"
+    "preprocessing('Sample_Amazon_Meta3.json', 'Preprocessed_Amazon_Meta2.json')"
    ]
   }
  ],
